# Homework-Web-13-FastAPI

./: main.py  pyproject.toml
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
